client/src/App.css
/* ... */
/* #####################################  START OF NAVBAR  ###################################### */

.navbar{
  height:55px;
  background: var(--navbarBackground);
  width:100%;
  position:relative;
  z-index: 3;
}

.navbar--wrapper{
  margin:0 10% 0 10%;
  height:100%;
  display:flex;
  flex-direction: column;
  justify-content: center;
}

.navbar--content{
  display:flex;
  flex-direction: row;
  justify-content: space-between;
}

.navbar--content--left{
  display: flex;
    flex-direction: column;
    cursor: pointer;
    align-items: center;
    justify-content: center;
}

.navbar--content--left a{
    flex-direction: column;
    cursor: pointer;
    align-items: center;
    justify-content: center;
    display: flex;
}

.navbar--content--right{
  display:flex;
  align-items:center;
}

.navbar--link{
  margin-left:25px;
  margin-right:20px;
  color:white;
  font-family: "Nunito ExtraBold", sans-serif;
}

.navbar--link--button{
    margin-right:25px;
    color:white;
    font-family: "Nunito ExtraBold", sans-serif;
    border: 0;
    height: 35px;
    width: 119px;
    border-radius: 3px;
    background: var(--navbarButtonBackground);
    box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
    cursor:pointer;
    transition:0.2s;
}

.navbar--link--button:hover{
    transition:0.2s;
    opacity:0.9;
}

.navbar--user--menu{
  display:flex;
    cursor: pointer;
}

.navbar--dropdown--container{
  position: absolute;
  right: 10%;
  top: 55px;
  z-index: 5;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.24);
  border-radius:0 0 5px 5px;
  background:white;
  opacity:0;
}

.navbar--dropdown--content{
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height:100%;
  opacity:0;
 }

.navbar--dropdown--content a{
    width:100%;
    text-align: center;
    text-decoration: none;
    color: white;
    padding: 3px 0;
    font-weight: bold;
}

.navbar--dropdown--content a:hover{
    color: white;
    background:var(--linksHover);
}


.dropdown--menu--link{
  margin:11px;
  font-weight:700;
}

.menu--arrow{
    transition:0.2s;
}

.rotate-arrow{
    transform:rotate(90deg);
    transition:0.2s;
}
.toggle--theme{
    cursor: pointer;
}

.menu-collapsed{
    animation-name:collapseMenu;
    animation-duration: 0.4s;
    animation-fill-mode: forwards;
    background: var(--navbarBackground);
}

@keyframes collapseMenu {
    from{
        width: 0;
        height: 0;
        opacity:0;
    }
    to{
        width: 200px;
        height: 200px;
        opacity:1;
    }
}

.fadeIn{
    animation-name:fadeInAnim;
    animation-duration: 0.5s;
    animation-delay: 0.2s;
    animation-fill-mode: forwards;
}

@keyframes fadeInAnim{
    from{
        opacity:0;
    }
    to{
        opacity:1;
    }
}


/* #####################################  END OF NAVBAR  ###################################### */

/* #####################################  START OF VALUE BLOCK  ###################################### */


.block--container{
  width:100%;
  padding:13px 0 13px 0;
}

.block--container--content{
  margin:0 10% 0 10%;
  display:flex;
  justify-content: space-between;
}

.value--block{
  width:32%;
  height:150px;
  box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
  border-radius:5px;
  position: relative;
  transition:0.2s;
  cursor:pointer;
  background-color: var(--primaryBackground);
    color:var(--secondaryTextColor);
}

.value--block:hover{
    box-shadow: 0 0 7px rgba(0, 0, 0, 0.35);
    transition:0.2s;
    transform:scale(1.01)perspective(1px);
}

.value--block:hover > .blue--line{
    height:0;
    transition:0.2s;
}

.blue--line{
  position:absolute;
  width:100%;
  top:0;
  height:7px;
  background: var(--linesBackground);
  border-radius: 5px 5px 0 0;
  transition:0.2s;
}

.value--block-content{
  display:flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  height:100%;
}

.value--block--value--type{
  margin:0;
  font-family: "Nunito ExtraBold",sans-serif;
    color:var(--secondaryTextColor);
}

.value--block--value{
  font-size:30px;
  margin:10px 0 0 0;
  font-weight:700;
}

.makeGreen{
  color:#21AC00 ;
}


/* #####################################  END OF VALUE BLOCK  ###################################### */

/* #####################################  START OF ASSETS  ###################################### */



.assets--container{
  width:100%;
  margin-top:3px;
}

.assets--inner--container{
  margin:0 10% 0 10%;
  padding-bottom: 1px;
  box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
  border-radius:5px;
  min-height:71vh;
  position:relative;
  padding-top:20px;
  background-color: var(--primaryBackground);
}

.assets--search--filter-container{
  width:100%;
  height:60px;
  display:flex;
  justify-content: space-between;
}

.assets--search--filter{
  margin-left:25px;
  align-self: center;
}

.assets--search--filter input{
  width:300px;
  height:27px;
  border:0;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.24);
  padding-left:10px;

}

.assets--search--filter input::placeholder{
  color: #797979;
  font-family: "Nunito SemiBold",sans-serif;
}

.assets--sort--filter{
  margin-right:25px;
  align-self: center;

}

.assets--sort--filter select{
  width:240px;
  height:27px;
  border:0;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.24);
  padding-left:10px;
  color: #797979;
}

.asset--container{
  margin-left:25px;
  margin-right:25px;
  margin-top:2px;
}

.asset{
  width:100%;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.24);
  height:65px;
  margin-bottom:20px;
  position: relative;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  transition:0.2s;
  cursor:pointer;
}

.asset:hover{
    box-shadow: 0 0 7px rgba(0, 0, 0, 0.28);
    transition:0.2s;
    transform:scale(1.01)perspective(1px);
}

.asset:hover > .asset--blue--line{
    transition:0.2s;
    width:0;
}
/* ... */

